# potluck

./: .gitignore  README.md  app.py  pyproject.toml  schema.sql
static/: style.css
templates/: base.html  edit_recipe.html  index.html  login.html  new_recipe.html  recipe_detail.html  register.html
tests/: test_app.py
